    USE THEM except if you want to help debugging and improving it and after
    having made a backup with some other, proven method.
    USE BOTH ON YOUR OWN RISK!


Version 1.7.0current:

  Bug Fixes:
    * Fix xmlrpc request.read() call to use content-length header, if available.
    * Fix traceback in filesys.py on Mac OS X when import Carbon fails.

  Other changes:
    * HINT: If you want to use xapian based indexed search, you need to have
            Xapian >= 1.0.0.
    * Removed dependency on PyStemmer (we just use the stemmer built into
      Xapian (it uses utf-8 since 1.0.0, so we can use it)).


Version 1.7.0rc2:

  Bug Fixes:
    * Security Fix: fixed MoinMoinBugs/DummyPasswordInAutoCreatedLdapUserProfiles
      (bug was present since some auth refactoring in 1.7.0alpha).
    * Fix editor preview not working for new pages.
    * Add ssh protocol to url_schemas.
    * Fix PageList macro with search errors.
    * Center the message icons and fix their spacing. Add a class to the
      "Clear message" link, make the link text smaller and lower.
    * Better handling of ImportErrors (farmconfig, macros, wikiserverconfig).
    * Builtin search: support mimetype: search for builtin engine, too
    * Xapian search/indexing:
      * use text/<format> as mimetype for pages
      * index also major and minor for mimetypes, so it will find 'text' or
        'plain' as well as 'text/plain'
      * remove crappy num regex from WikiAnalyzer, improve tokenization
    * Fix the second hmac use for python 2.4
    * csv parser:
      * fix delimiter sniffing troubles, fix tests
      * remove empty lines above the csv table
    * Event notifications: send notifies in the language of the message
      recipient (not of the current wiki user), other fixes.

  Other changes:
    * HINT: ldap_login behaves a bit different now:
      In previous moin versions, ldap_login tended to either successfully